syntax = "proto3";

package article;

service Article {
    rpc GetArticleInfo (queryRequest) returns (articleInfo) {}
    rpc GetArticleList (queryRequest) returns (articleList) {}
}

message queryRequest {
    int64 id = 1;
    int64 limit = 2;
    int64 page = 3;
}

message articleInfo {
    int64 id = 1;
    string title = 2;
    string slug = 3;
    string summary = 4;
    string body = 5;
    string image = 6;
    int64 views = 7;
    int32 user_id = 8;
    string created_at = 9;
    string updated_at = 10;
}

message articleList {
    repeated articleInfo list = 1;
}